use the project's name as title instead of "Loading..."
fix #1001

--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Loading...</title>
+  <title>__API_NAME__</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="assets/bootstrap.min.css" rel="stylesheet" media="screen">
