--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>__API_NAME__</title>
+  <meta name="description" content="__API_DESCRIPTION__">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="assets/bootstrap.min.css" rel="stylesheet" media="screen">
