Display combobox for allowed values.

--- a/template/index.html
+++ b/template/index.html
@@ -383,6 +383,16 @@
               <div class="form-group">
                 <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
                 <div class="input-group">
+                  {{#if allowedValues}}
+                  <div class="input-group-addon sample-request-select">
+                    <select>
+                      <option value=""></option>
+                      {{#each allowedValues}}
+                      <option value="{{{removeDblQuotes this}}}">{{{removeDblQuotes this}}}</option>
+                      {{/each}}
+                    </select>
+                  </div>
+                  {{/if}}
                   <input id="sample-request-param-field-{{field}}" type="{{setInputType type}}" placeholder="{{field}}" class="form-control sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" {{#if optional}}data-sample-request-param-optional="true"{{/if}}>
                   <div class="input-group-addon">{{{type}}}</div>
                 </div>
@@ -401,6 +411,16 @@
               <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}{{#if optional}} ({{__ "optional"}}){{/if}}</label>
               <div class="input-group col-md-6">
                 <div class="input-group-addon">{{{type}}}</div>
+                {{#if allowedValues}}
+                <div class="input-group-addon sample-request-select">
+                  <select>
+                    <option value=""></option>
+                    {{#each allowedValues}}
+                    <option value="{{{removeDblQuotes this}}}">{{{removeDblQuotes this}}}</option>
+                    {{/each}}
+                  </select>
+                </div>
+                {{/if}}
                 <input id="sample-request-param-field-{{field}}"
                   class="form-control sample-request-input"
                   type="{{setInputType type}}"
