--- a/template/src/css/main.css
+++ b/template/src/css/main.css
@@ -41,6 +41,10 @@ input[type="date"] {
   line-height: 1.4 !important;
 }
 
+.input-group-addon.sample-request-select {
+  padding: 0 6px;
+}
+
 /* ------------------------------------------------------------------------------------------
  * Content
  * ------------------------------------------------------------------------------------------ */
