--- a/template/index.html
+++ b/template/index.html
@@ -193,7 +193,7 @@
 
 <script id="template-article-query-block" type="text/x-handlebars-template">
   {{#if article.query}}
-    <h2>Query Parameter(s)</h2>
+    <h2>{{__ "Query Parameter(s)"}}</h2>
     <table>
       <thead>
         <tr>
@@ -230,7 +230,7 @@
 
 <script id="template-article-body-block" type="text/x-handlebars-template">
   {{#if article.body}}
-    <h2>Request Body</h2>
+    <h2>{{__ "Request Body"}}</h2>
     <table>
       <thead>
         <tr>
