--- a/template/src/css/main.css
+++ b/template/src/css/main.css
@@ -47,6 +47,7 @@ input[type="date"] {
 
 .input-group-addon.sample-request-query-select select {
   border: 1px solid transparent;
+  width: auto;
 }
 
 /* ------------------------------------------------------------------------------------------
