Fix apiQuery allowed fields SELECT style (height)

--- a/template/src/css/main.css
+++ b/template/src/css/main.css
@@ -48,6 +48,7 @@ input[type="date"] {
 .input-group-addon.sample-request-query-select select {
   border: 1px solid transparent;
   width: auto;
+  height: 32px;
 }
 
 /* ------------------------------------------------------------------------------------------
