CSS simplification for labels

--- a/template/index.html
+++ b/template/index.html
@@ -209,9 +209,9 @@
           <tr>
             <td class="code">{{this.field}}&nbsp;&nbsp;
             {{#if optional}}
-              <span class="label label-optional">{{__ "optional"}}</span>
+              <span class="label optional">{{__ "optional"}}</span>
             {{else}}
-              <span class="label label-required">{{__ "required"}}</span>
+              <span class="label required">{{__ "required"}}</span>
             {{/if}}
             </td>
             {{#unless this.Type compare=null}}
@@ -252,9 +252,9 @@
           <tr>
             <td class="code">{{this.field}}&nbsp;&nbsp;
             {{#if optional}}
-              <span class="label label-optional">{{__ "optional"}}</span>
+              <span class="label optional">{{__ "optional"}}</span>
             {{else}}
-              <span class="label label-required">{{__ "required"}}</span>
+              <span class="label required">{{__ "required"}}</span>
             {{/if}}
             </td>
             {{#unless this.Type compare=null}}
@@ -300,9 +300,9 @@
           <tr>
             <td class="code">{{{splitFill field "." "&nbsp;&nbsp;"}}}
             {{#if optional}}
-              <span class="label label-optional">{{__ "optional"}}</span>
+              <span class="label optional">{{__ "optional"}}</span>
             {{else}}
-              <span class="label label-required">{{__ "required"}}</span>
+              <span class="label required">{{__ "required"}}</span>
             {{/if}}</td>
             {{#if ../../_hasType}}
               <td class="code">
