--- a/template/index.html
+++ b/template/index.html
@@ -193,7 +193,7 @@
 
 <script id="template-article-query-block" type="text/x-handlebars-template">
   {{#if article.query}}
-    <h2>Query Parameter(s)</h2>
+    <h2>{{__ "Query Parameter(s)"}}</h2>
     <table>
       <thead>
         <tr>
@@ -207,11 +207,26 @@
       <tbody>
         {{#each params}}
           <tr>
-            <td class="code">{{this.field}}</td>
+            <td class="code">{{this.field}}&nbsp;&nbsp;
+            {{#if optional}}
+              <span class="label optional">{{__ "optional"}}</span>
+            {{else}}
+              <span class="label required">{{__ "required"}}</span>
+            {{/if}}
+            </td>
             {{#unless this.Type compare=null}}
               <td class="code">{{this.type}}</td>
             {{/unless}}
-            <td>{{{nl2br this.description}}}</td>
+            <td>{{{nl2br this.description}}}
+            {{#if defaultValue}}<p class="default-value">{{__ "Default value:"}} <code>{{{defaultValue}}}</code></p>{{/if}}
+            {{#if size}}<p class="type-size">{{__ "Size range:"}} <code>{{{size}}}</code></p>{{/if}}
+            {{#if allowedValues}}<p class="type-size">{{__ "Allowed values:"}}
+              {{#each allowedValues}}
+                <code>{{{this}}}</code>{{#unless @last}}, {{/unless}}
+              {{/each}}
+              </p>
+            {{/if}}
+            </td>
           </tr>
         {{/each}}
       </tbody>
@@ -221,7 +236,7 @@
 
 <script id="template-article-body-block" type="text/x-handlebars-template">
   {{#if article.body}}
-    <h2>Request Body</h2>
+    <h2>{{__ "Request Body"}}</h2>
     <table>
       <thead>
         <tr>
@@ -235,7 +250,13 @@
       <tbody>
         {{#each params}}
           <tr>
-            <td class="code">{{this.field}}{{#if optional}}&nbsp;&nbsp;<span class="label label-optional">{{__ "optional"}}</span>{{/if}}</td>
+            <td class="code">{{this.field}}&nbsp;&nbsp;
+            {{#if optional}}
+              <span class="label optional">{{__ "optional"}}</span>
+            {{else}}
+              <span class="label required">{{__ "required"}}</span>
+            {{/if}}
+            </td>
             {{#unless this.Type compare=null}}
               <td class="code">{{this.type}}</td>
             {{/unless}}
@@ -277,7 +298,12 @@
         <tbody>
         {{#each this}}
           <tr>
-            <td class="code">{{{splitFill field "." "&nbsp;&nbsp;"}}}{{#if optional}}<span class="label label-optional">{{__ "optional"}}</span>{{/if}}</td>
+            <td class="code">{{{splitFill field "." "&nbsp;&nbsp;"}}}
+            {{#if optional}}
+              <span class="label optional">{{__ "optional"}}</span>
+            {{else}}
+              <span class="label required">{{__ "required"}}</span>
+            {{/if}}</td>
             {{#if ../../_hasType}}
               <td class="code">
                 {{{type}}}
@@ -383,8 +409,28 @@
               <div class="form-group">
                 <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
                 <div class="input-group">
-                  <input id="sample-request-param-field-{{field}}" type="{{setInputType type}}" placeholder="{{field}}" class="form-control sample-request-param" data-sample-request-param-name="{{field}}" data-sample-request-param-group="sample-request-param-{{@../index}}" {{#if optional}}data-sample-request-param-optional="true"{{/if}}>
+                  {{#if allowedValues}}
                   <div class="input-group-addon">{{{type}}}</div>
+                  <div class="input-group-addon sample-request-select">
+                    <select class="form-control" data-name="{{field}}" data-family="query" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
+                      <option value="" class="empty">&lt;{{__ "No value"}}&gt;</option>
+                      {{#each allowedValues}}
+                      <option {{#ifCond ../defaultValue '===' this}} selected {{/ifCond}}value="{{{removeDblQuotes this}}}">{{{removeDblQuotes this}}}</option>
+                      {{/each}}
+                    </select>
+                  </div>
+                  <input class="invisible">
+                  {{else}}
+                  <input id="sample-request-param-field-{{field}}"
+                    class="form-control sample-request-param" data-sample-request-param-name="{{field}}"
+                    type="{{setInputType type}}" placeholder="{{field}}"
+                    value="{{#if defaultValue}}{{ defaultValue }}{{/if}}"
+                    placeholder="{{#if defaultValue}}{{ defaultValue }}{{else}}{{field}}{{/if}}"
+                    data-sample-request-param-name="{{field}}"
+                    data-sample-request-param-group="sample-request-param-{{@../index}}"
+                    {{#if optional}}data-sample-request-param-optional="true"{{/if}}>
+                  <div class="input-group-addon">{{{type}}}</div>
+                  {{/if}}
                 </div>
               </div>
               {{/each}}
@@ -401,6 +447,17 @@
               <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}{{#if optional}} ({{__ "optional"}}){{/if}}</label>
               <div class="input-group col-md-6">
                 <div class="input-group-addon">{{{type}}}</div>
+                {{#if allowedValues}}
+                <div class="input-group-addon sample-request-select">
+                  <select class="form-control" data-name="{{field}}" data-family="query" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
+                    <option value="" class="empty">&lt;{{__ "No value"}}&gt;</option>
+                    {{#each allowedValues}}
+                    <option {{#ifCond ../defaultValue '===' this}} selected {{/ifCond}}value="{{{removeDblQuotes this}}}">{{{removeDblQuotes this}}}</option>
+                    {{/each}}
+                  </select>
+                </div>
+                <input class="invisible">
+                {{else}}
                 <input id="sample-request-param-field-{{field}}"
                   class="form-control sample-request-input"
                   type="{{setInputType type}}"
@@ -410,6 +467,7 @@
                   data-family="query"
                   data-group="{{@../index}}"
                   {{#if optional}}data-optional="true"{{/if}}>
+                {{/if}}
               </div>
             </div>
           {{/each}}
@@ -446,6 +504,17 @@
               <label class="col-md-3 control-label" for="sample-request-param-field-{{field}}">{{field}}</label>
               <div class="input-group">
                 <div class="input-group-addon">{{{type}}}</div>
+                {{#if allowedValues}}
+                <div class="input-group-addon sample-request-select">
+                  <select class="form-control" data-name="{{field}}" data-family="body" data-group="{{@../index}}" {{#if optional}}data-optional="true"{{/if}}>
+                    <option value="" class="empty">&lt;{{__ "No value"}}&gt;</option>
+                    {{#each allowedValues}}
+                    <option {{#ifCond ../defaultValue '===' this}} selected {{/ifCond}}value="{{{removeDblQuotes this}}}">{{{removeDblQuotes this}}}</option>
+                    {{/each}}
+                  </select>
+                </div>
+                <input class="invisible">
+                {{else}}
                 <input id="sample-request-param-field-{{field}}"
                   class="form-control sample-request-input"
                   type="{{setInputType type}}"
@@ -456,6 +525,7 @@
                   data-name="{{field}}"
                   data-content-type="form"
                   {{#if optional}}data-optional="true"{{/if}}>
+                {{/if}}
               </div>
             </div>
           {{/each}}
