fix header/footer in aloneDisplay mode (#905)

--- a/template/index.html
+++ b/template/index.html
@@ -75,7 +75,7 @@
 
 <script id="template-header" type="text/x-handlebars-template">
   {{#if content}}
-    <div id="api-_" class="show-api-article show-api-_-article">{{{content}}}</div>
+    <div id="api-_header" class="show-api-article show-api-_-article">{{{content}}}</div>
   {{/if}}
 </script>
 
