--- a/template/index.html
+++ b/template/index.html
@@ -14,7 +14,7 @@
   <link href="assets/favicon-16x16.png"rel="icon" type="image/png" sizes="16x16">
 </head>
 
-<body data-spy="scroll" class="container-fluid">
+<body class="container-fluid">
 
 <!-- SIDENAV -->
 <script id="template-sidenav" type="text/x-handlebars-template">
